# deadpool-fantoccini

./: Cargo.toml  README.md
.github/workflows/: check.yml  ci.yml  rust.yml  test.yml
ci/: macos-latest-chrome  macos-latest-firefox  ubuntu-latest-chrome  ubuntu-latest-firefox  windows-latest-chrome.ps1  windows-latest-firefox.ps1
src/: lib.rs  native_tls.rs  reexports.rs  rustls_tls.rs
