[package]
name = "deadpool-fantoccini"
version = "0.2.3"
description = "Dead simple async session pool for fantoccini."
readme = "README.md"
repository = "https://github.com/OpenByteDev/deadpool-fantoccini" 
documentation = "https://docs.rs/deadpool-fantoccini"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
keywords = ["pool", "async", "webdriver", "session"]
categories = ["asynchronous", "development-tools::testing", "web-programming"]

[dependencies]
deadpool = { version = "0.9", default-features = false, features = ["managed"] }
fantoccini = { version = "0.17", default-features = false }
hyper = { version = ">=0.14.10", default-features = false }
hyper-tls = { version = "0.5", default-features = false, optional = true }
hyper-rustls = { version = "0.23", default-features = false, optional = true }

[dev-dependencies]
fantoccini = { version = "0.17", default-features = false, features = ["native-tls"] }
tokio = { version = "1.14", default-features = false, features = ["rt", "macros", "rt-multi-thread"] }
webdriver-install = { version = "0.3", default-features = false }
tempfile = { version = "3.2", default-features = false }
defer-lite = { version = "1.0", default-features = false }

[features]
default = ["native-tls"]
full = ["native-tls", "rustls-tls"]
native-tls = ["fantoccini/native-tls", "hyper-tls"]
rustls-tls = ["fantoccini/rustls-tls", "hyper-rustls"]
doc_cfg = ["full"]

[package.metadata.docs.rs]
features = ["doc_cfg"]
