[package]
name = "deadpool-fantoccini"
version = "0.3.0"
description = "Dead simple async session pool for fantoccini."
readme = "README.md"
repository = "https://github.com/OpenByteDev/deadpool-fantoccini" 
documentation = "https://docs.rs/deadpool-fantoccini"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
keywords = ["pool", "async", "webdriver", "session"]
categories = ["asynchronous", "development-tools::testing", "web-programming"]

[dependencies]
deadpool = { version = "0.12", default-features = false, features = ["managed"] }
fantoccini = { version = "0.21", default-features = false }
hyper = { version = "1.1", default-features = false }
hyper-util = { version = "0.1.3", features = ["client-legacy"] }
hyper-tls = { version = "0.6", default-features = false, optional = true }
hyper-rustls = { version = "0.27", default-features = false, optional = true }

[dev-dependencies]
fantoccini = { version = "0.21", default-features = false, features = ["native-tls"] }
tokio = { version = "1.45", default-features = false, features = ["rt", "macros", "rt-multi-thread"] }
defer-lite = { version = "1.0", default-features = false }

[features]
default = ["native-tls"]
full = ["native-tls", "rustls-tls"]
native-tls = ["fantoccini/native-tls", "hyper-tls"]
rustls-tls = ["fantoccini/rustls-tls", "hyper-rustls"]
